@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-12-13
+2013-12-19 Andy Salnikov
+- hdf5 backend: add 'zero_dims' tag to dataset, nedeed for new Epix type
+
 Tag: V00-12-12
 2013-12-16 David Schneider
 - hdf5 Translator backend, epics handling, remove FullFrame, documentation
